--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~8.2.1",
     "@angular/platform-browser-dynamic": "~8.2.1",
     "@angular/router": "~8.2.1",
+    "@ngrx/effects": "^8.2.0",
+    "@ngrx/entity": "^8.2.0",
     "@ngrx/store": "^8.2.0",
+    "@ngrx/store-devtools": "^8.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
