--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Slkchat": {
+    "Sleek": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,14 +17,15 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Slkchat",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss"
@@ -46,7 +47,7 @@
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
-              "vendorChunk": false,
+              "vendorChunk": true,
               "buildOptimizer": true,
               "budgets": [
                 {
@@ -54,26 +55,28 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ]
+              ],
+              "serviceWorker": true,
+              "ngswConfigPath": "ngsw-config.json"
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Slkchat:build",
+            "browserTarget": "Sleek:build",
             "port": 1949
           },
           "configurations": {
             "production": {
-              "browserTarget": "Slkchat:build:production"
+              "browserTarget": "Sleek:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Slkchat:build"
+            "browserTarget": "Sleek:build"
           }
         },
         "test": {
@@ -89,7 +92,8 @@
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ]
           }
         },
@@ -107,7 +111,7 @@
         }
       }
     },
-    "Slkchat-e2e": {
+    "Sleek-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -116,11 +120,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Slkchat:serve"
+            "devServerTarget": "Sleek:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Slkchat:serve:production"
+              "devServerTarget": "Sleek:serve:production"
             }
           }
         },
@@ -136,5 +140,5 @@
       }
     }
   },
-  "defaultProject": "Slkchat"
+  "defaultProject": "Sleek"
 }
