--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
+    "ng-connection-service": "^1.0.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
