--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
     "ng-connection-service": "^1.0.4",
+    "ngx-device-detector": "^1.3.12",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
