--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngrx/store-devtools": "^8.2.0",
     "core-js": "^2.5.4",
     "firebase": "^6.3.5",
+    "luxon": "^1.21.0",
     "ng-connection-service": "^1.0.4",
     "ngx-device-detector": "^1.3.12",
     "rxjs": "~6.5.2",
